# dcapal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  metadata.json  rustfmt.nightly.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-question-support.md  01-question-support.yml  02-security-report.md  02-security-report.yml  03-enhancement-request.md  03-enhancement-request.yml  04-feature-request.md  04-feature-request.yml  05-bug-report.md  05-bug-report.yml
.github/workflows/: backend.yml  (+8 more)
dcapal-backend/: .env.example  .gitignore  Cargo.toml  README.md  dca-pal.yml  dcapal.yml  docker-compose.yml
dcapal-backend/.sqlx/: query-39015f5d8b9fa29a9c2cacbf72c15919021e1fbe3985f6ce3ae9cf64c2b26c7d.json  query-48b3af8a7ea767e45d89b05f35d2127d6aae61f0178abc4690f046eb4c46fc8f.json  query-4c166e7122730088cfe8109ec9ac73d451ae53867a080062201f81f777425640.json  query-535ccbbd0ac14209d033b43ae052a77010f1379064618a560762f8912e9f2919.json  query-658c86599096d76b747c2272556a3ae8c2cfedb7fd97721a2b9ba8cafc1c288f.json  query-8c666f4ed0aefd3c309d5a15129cad8158a2972b6c6cde56888774b78751e40a.json  query-a1c885d5599506e3645cc3a4f70ae7670ecc75613044329a4f4fddbc15736b8e.json  query-a2ef05dfff31e1a9812c592890af1f642adaa0af9f4888cc92c2a361b35f1031.json  query-cda087d7a3b55b6729cfc52498de813ab5448897b1ecb7a375c92d7457545292.json  query-e3d6e41ff69438853a9c374f5235d06645bd49bacfcc8ecc4a1055b7e7e18d67.json
dcapal-backend/config/: .env.supabase
dcapal-backend/config/db/init/: 00_revoke_create_on_public.sql  10_create_app_role.sh  11_create_readonly_role.sh
dcapal-backend/config/dcapal/: dca-pal.yml  dcapal.yml
dcapal-backend/config/grafana/provisioning/datasources/: datasources.yml
dcapal-backend/config/postgres/scripts/: init.sql
dcapal-backend/config/prometheus/: prometheus.yml
dcapal-backend/config/redis/: redis-stack.conf  users.acl
dcapal-backend/config/supabase/: config.toml
dcapal-backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  start.sh
dcapal-backend/docker/data/grafana/: grafana.db  grafana.db-journal
dcapal-backend/docker/scripts/: init.sql
dcapal-backend/docs/: openapi.json  portfolio-schema.json
dcapal-backend/docs/rest/: README.md
dcapal-backend/docs/rest/public/: portfolio.md  sync_portfolios.md
dcapal-backend/docs/rest/public/import/: get.md  post.md
dcapal-backend/docs/schema/portfolio/v1/: schema.json
dcapal-backend/migration/: Cargo.toml
dcapal-backend/migration/src/: lib.rs  m20250131_084915_create_user_table.rs  m20250201_132150_create_table_portfolios.rs  m20250201_132246_create_table_portfolio_asset.rs  m20250207_000000_add_average_buy_price.rs
dcapal-backend/migrations/: 20240731073355_init.sql  20240812160840_add-instruments-and-holdings-tables.sql
dcapal-backend/migrations_old/: 20240731073355_init.sql  20240812160840_add-instruments-and-holdings-tables.sql
dcapal-backend/scripts/: start.sh
dcapal-backend/src/: config.rs  error.rs  lib.rs  main.rs  maintenance.rs  stats.rs
dcapal-backend/src/adapter/: cw.rs  ipapi.rs  kraken.rs  mod.rs  yahoo.rs
dcapal-backend/src/api/: mod.rs
dcapal-backend/src/app/: mod.rs
dcapal-backend/src/app/domain/: entity.rs  market_data_utils.rs  mod.rs
dcapal-backend/src/app/domain/db/: fee.rs  fee_type.rs  mod.rs  portfolio.rs  portfolio_asset.rs  portfolioasset.rs  portfolios.rs  prelude.rs  user.rs  users.rs
dcapal-backend/src/app/infra/: claim.rs  maintenance.rs  mod.rs  stats.rs  utils.rs
dcapal-backend/src/app/services/: ai.rs  command.rs  ip2location.rs  market_data.rs  mod.rs  portfolio.rs  session.rs  user.rs
dcapal-backend/src/app/workers/: market_discovery.rs  mod.rs  price_updater.rs
dcapal-backend/src/domain/: command.rs  entity.rs  ip2location.rs  market_data.rs  mod.rs  utils.rs
dcapal-backend/src/ports/: mod.rs
dcapal-backend/src/ports/inbound/: mod.rs
dcapal-backend/src/ports/inbound/dto/: response.rs
dcapal-backend/src/ports/inbound/rest/: ai.rs  auth.rs  mod.rs  openapi.rs  portfolio.rs  proxy_types.rs  request.rs  response.rs  user.rs
dcapal-backend/src/ports/inbound/rest/auth/: mod.rs
dcapal-backend/src/ports/inbound/service/: user.rs
dcapal-backend/src/ports/outbound/: mod.rs
dcapal-backend/src/ports/outbound/adapter/: cw.rs  ipapi.rs  kraken.rs  mod.rs  yahoo.rs
dcapal-backend/src/ports/outbound/repository/: ai.rs  dto.rs  mod.rs  portfolio.rs  user.rs
dcapal-backend/src/ports/outbound/repository/market_data/: mod.rs  redis_asset.rs  redis_market.rs
dcapal-backend/src/repository/: dto.rs  mod.rs  utils.rs
dcapal-backend/src/repository/market_data/: mod.rs  redis_asset.rs  redis_market.rs
dcapal-backend/tools/: generate_openapi.rs
dcapal-frontend/: .env.development  .env.production  .gitignore  .prettierrc  README.md  components.json  cypress.config.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  postcss.config.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.js  vitest.config.mjs  webpack.common.js  webpack.config.js  webpack.dev.js
dcapal-optimizer-wasm/: Cargo.toml
dcapal-optimizer-wasm/src/: lib.rs  optimize.rs  utils.rs
dcapal-optimizer-wasm/src/optimize/: advanced.rs  basic.rs  computation.rs  mod.rs  suggestions.rs
dcapal-optimizer-wasm/tests/: test_runner.rs
dcapal-optimizer-wasm/tests/scenarios/: BUGS-1-negligible-budget-left.json  BUGS-2-high-budget-left.json  BUGS-3-negligible-budget-left-fractional-shares.json  BUGS-4-target-weight-zero-should-not-allocate-funds.json  allocation_tie.json
dcapal-optimizer-wasm/tests/scenarios/allocateAllBudget/: low-budget-allocate-all.json  low-budget-do-not-allocate-all.json
dcapal-optimizer-wasm/tests/scenarios/transactionFees/: fixed-transaction-fee-asset-override.json  fixed-transaction-fee.json  variable-transaction-fee.json
dcapal-optimizer-wasm/tests/test_runner/: error.rs  main.rs  scenario.rs  utils_macros.rs
script/: merge-dependabot.sh
(+214 files in other folders)
