[workspace]
resolver = "2"
members = ["dcapal-backend", "dcapal-optimizer-wasm", "dcapal-backend/migration"]

[workspace.package]
version = "0.9.0"
authors = ["Leonardo Arcari <leonardo1.arcari@gmail.com>"]
edition = "2024"
rust-version = "1.86"

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-wasm]
inherits = "release"
# Tell `rustc` to optimize for small code size.
opt-level = "s"
