[workspace]
resolver = "2"
members = [
  "dcapal-backend",
  "dcapal-optimizer-wasm",
  "dcapal-backend/migration",
]

[workspace.package]
version = "0.9.0"
authors = ["Leonardo Arcari <leonardo1.arcari@gmail.com>"]
edition = "2024"
rust-version = "1.88"

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-wasm]
inherits = "release"
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[workspace.dependencies]
anyhow = "1.0.98"
async-openai = "0.28.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
config = "0.15.11"
console_error_panic_hook = { version = "0.1.7" }
const_format = "0.2.34"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-redis = { version = "0.20.0", features = ["serde"] }
env_logger = "0.11.8"
failsafe = "1.3.0"
futures = "0.3.31"
getrandom = { version = "0.3.3" }
glob = "0.3.2"
hyper = { version = "1.6.0", features = ["full"] }
ip2location = "0.5.4"
itertools = "0.14.0"
js-sys = "0.3.77"
jsonschema = "0.30.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
minilp = "0.2.2"
once_cell = "1.21.3"
parking_lot = "0.12.4"
rand = "0.9.1"
redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.20", default-features = false, features = [
  "gzip",
  "json",
  "rustls-tls",
] }
rquest = { version = "5.1.0", features = ["json", "stream"] }
rust_decimal = { version = "1.37.2", features = [
  "serde",
  "serde-float",
  "macros",
] }
rust_decimal_macros = "1.37.1"
sea-orm = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "mock",
] }
serde = "1.0.219"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
strum = "0.27.1"
strum_macros = "0.27.2"
test-log = { version = "0", features = ["log"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["chrono", "decimal", "uuid"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
wasm-logger = "0.2.0"
