[package]
name = "dcapal-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
hyper = { version = "1.5.2", features = ["full"] }
deadpool-redis = { version = "0.18.0", features = ["serde"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
reqwest = { version = "0.12.9", features = ["gzip", "json"] }
serde = "1.0.216"
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = { version = "0.4.39", features = ["serde"] }
const_format = "0.2.34"
futures = "0.3.31"
strum = "0.26.3"
strum_macros = "0.26.4"
config = "0.13.4"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
tracing-appender = "0.2.3"
regex = "1.11.1"
itertools = "0.13.0"
failsafe = "1.3.0"
ip2location = "0.5.4"
jsonschema = "0.28.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
utoipa = "4.2.3"
once_cell = "1.19.0"
time = { version = "0.3.36", features = ["serde"] }
async-openai = "0.23.4"
garde = { version = "0.20.0", features = ["full"] }
utoipa-axum = "0.1.4"
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock"
] }
sea-orm-migration = { version = "1.1.4", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
rust_decimal = { version = "1.30", features = ["serde", "serde-float"] }
