[package]
name = "dcapal-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
hyper = { version = "1.6.0", features = ["full"] }
deadpool-redis = { version = "0.20.0", features = ["serde"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.15", features = ["gzip", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
const_format = "0.2.34"
futures = "0.3.31"
strum = "0.27.1"
strum_macros = "0.27.1"
config = "0.15.11"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
tracing-appender = "0.2.3"
itertools = "0.14.0"
failsafe = "1.3.0"
ip2location = "0.5.4"
jsonschema = "0.29.1"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
utoipa = { version = "5.3.1", features = ["chrono", "decimal", "uuid"] }
once_cell = "1.21.3"
async-openai = "0.28.1"
sea-orm = { version = "1.1.8", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock"
] }
rust_decimal = { version = "1.37", features = ["serde", "serde-float"] }
async-trait = "0.1.88"
