[package]
name = "dcapal-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
config = { workspace = true }
const_format = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
failsafe = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
ip2location = { workspace = true }
itertools = { workspace = true }
jsonschema = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
rquest = { workspace = true }
