[package]
name = "dcapal-optimizer-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM dependencies
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.49"
wasm-logger = "0.2.0"
js-sys = "0.3.76"
console_error_panic_hook = { version = "0.1.7", optional = true }
# Library dependencies
log = "0.4.26"
minilp = "0.2.2"
serde = { version = "1.0.216", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
futures = "0.3.31"
anyhow = "1.0.95"
thiserror = "2"
lazy_static = "1.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
rust_decimal = { version = "1.36.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.36.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
env_logger = "0.11.6"
test-log = { version = "0", features = ["log"] }
glob = "0.3.2"
serde_json = "1.0.134"
