[package]
name = "dcapal-optimizer-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM dependencies
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }

# Library dependencies
anyhow = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
lazy_static = { workspace = true }
log = { workspace = true }
js-sys = { workspace = true }
minilp = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true }
wasm-bindgen-test = { workspace = true }
